--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,9 @@
 			"@styles": ["src/styles"],
 			"@styles/*": ["src/styles/*"],
 			"@/types": ["src/types"],
-			"@/types/*": ["src/types/*"]
+			"@/types/*": ["src/types/*"],
+			"@utils": ["src/utils"],
+			"@utils/*": ["src/utils/*"]
 		}
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
