--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,8 @@
 		"paths": {
 			"@components": ["src/components"],
 			"@components/*": ["src/components/*"],
+			"@constants": ["src/constants"],
+			"@constants/*": ["src/constants/*"],
 			"@context": ["src/context"],
 			"@context/*": ["src/context/*"],
 			"@hooks": ["src/hooks"],
